--- a/quartz/styles/fonts.scss
+++ b/quartz/styles/fonts.scss
@@ -183,7 +183,7 @@ em {
   // Focus state for keyboard users
   &:focus-visible {
     outline: 2px solid var(--foreground);
-    outline-offset: 2px;
+    outline-offset: -2px;
     border-radius: 2px;
   }
 
